--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.StoryActivity"
-                  android:screenOrientation="portrait">
+                  android:screenOrientation="portrait"
+                  android:parentActivityName=".ui.MainActivity">
         </activity>
     </application>
 
